# blackboard_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_project.sh
.app_template/: CMakeLists.txt  main.cpp
APP_TEMPLATE/: CMakeLists.txt  main.cpp
app_template/: main.cpp
blackboard_app/: CMakeLists.txt  app.cpp  app.h  gui.cpp  gui.h  logger.cpp  logger.h  renderer.cpp  renderer.h  resources.h  window.cpp  window.h
blackboard_app/platform/: imgui_impl_sdl_bgfx.cpp  imgui_impl_sdl_bgfx.h
blackboard_gfx/: CMakeLists.txt  program.cpp  program.h
cmake/: fetch_external_dependencies.cmake
cmake/fetch_external/: ImGui.cmake  SDL.cmake  bgfx.cmake  glm.cmake  spdlog.cmake
projects/: CMakeLists.txt
projects/AppExample/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt  app.cpp  app.h  gui.h  renderer.cpp  renderer.h  resources.h  window.cpp  window.h
